--- a/src/Css/LangTable.css
+++ b/src/Css/LangTable.css
@@ -13,7 +13,7 @@
 .lang-table th {
   background-color: #ffffff;
   color: #333333;
-  /padding: 12px;
+  padding: 12px;
   text-align: left;
   border: 1px solid #cccccc;
 }
